[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop = "0.8.1"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
mysql = "23.0.1"
base64 = "0.20.0"
serde = "1.0.147"
tendermint = "0.26.0"
tendermint-light-client = "0.26.0"
tendermint-rpc = "0.26.0"
